add openai endpoint

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Phi4": {
-    "Endpoint": "https://your-foundry-endpoint.openai.azure.com/",
-    "DeploymentName": "phi-4"
+    "Endpoint": "https://ai-zavastore-pkvnsahglhdpi.openai.azure.com/",
+    "DeploymentName": "gpt-4o"
   }
 }
